[package]
name = "pasteboost"
version = "0.1.0"
description = "A lightweight clipboard assistant"
authors = ["PasteBoost"]
edition = "2021"

[lib]
name = "pasteboost_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse"] }
